5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1674_1103.log
== TEST (2019-04-30 00:07:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("valor de a: ")
b = input("valor de b: ")
x = input("valor de x: ")

if (a<=x<=b):
	print(x, "pertence ao intervalo ",a ,b)
elif:
	print(x, "nao pertencer ao intervalo ",a ,b)
else:
	if (b<=a):
	print("Entradas", a,"e",b "invalidas")
-- ERROR:
File "XXXX", line 10
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 00:08:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("valor de a: ")
b = input("valor de b: ")
x = input("valor de x: ")

if (a<=x<=b):
	print(x, "pertence ao intervalo ",a ,b)
else:
	if (a>=x>=b):
	print(x, "nao pertencer ao intervalo ",a ,b)
   else:
	   if (b<=a):
			print("Entradas", a,"e",b "invalidas")
-- ERROR:
File "XXXX", line 12
    print(x, "nao pertencer ao intervalo ",a ,b)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 00:08:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("valor de a: ")
b = input("valor de b: ")
x = input("valor de x: ")

if (a<=x<=b):
	print(x, "pertence ao intervalo ",a ,b)
else:
	if (a>=x>=b):
		print(x, "nao pertencer ao intervalo ",a ,b)
   else:
	   if (b<=a):
			print("Entradas", a,"e",b "invalidas")
-- ERROR:
File "XXXX", line 13
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 00:09:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("valor de a: ")
b = input("valor de b: ")
x = input("valor de x: ")

if (a<=x<=b):
	print(x, "pertence ao intervalo ",a ,b)
else:
	if (a>=x>=b):
		print(x, "nao pertencer ao intervalo ",a ,b)
else:
	if (b<=a):
		print("Entradas", a,"e",b "invalidas")
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:48:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("valor de a: ")
b = input("valor de b: ")
x = input("valor de x: ")

if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo ", a, ",", b)
   else:
		print(x, "nao pertencer ao intervalo ", a, ",", b)
else:
	print("Entradas", a,"e",b "invalidas")
-- ERROR:
File "XXXX", line 11
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:48:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("valor de a: ")
b = input("valor de b: ")
x = input("valor de x: ")

if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo ", a, ",", b)
	else:
		print(x, "nao pertencer ao intervalo ", a, ",", b)
else:
	print("Entradas", a,"e",b "invalidas")
-- ERROR:
File "XXXX", line 14
    print("Entradas", a,"e",b "invalidas")
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:49:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("valor de a: ")
b = input("valor de b: ")
x = input("valor de x: ")

if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo ", a, ",", b)
	else:
		print(x, "nao pertencer ao intervalo ", a, ",", b)
else:
	print("Entradas", a,"e",b "invalidas")
-- ERROR:
File "XXXX", line 14
    print("Entradas", a,"e",b "invalidas")
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:50:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("valor de a: ")
b = input("valor de b: ")
x = input("valor de x: ")

if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo ", a, ",", b)
	else:
		print(x, "nao pertencer ao intervalo ", a, ",", b)
else:
	print("Entradas", a, "e", b "invalidas")
-- ERROR:
File "XXXX", line 14
    print("Entradas", a, "e", b "invalidas")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:50:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("valor de a: ")
b = input("valor de b: ")
x = input("valor de x: ")

if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo ", a, ",", b)
	else:
		print(x, "nao pertencer ao intervalo ", a, ",", b)
else:
	print("Entradas", a, "e", b)
-- OUTPUT:
4 nao pertencer ao intervalo  2 , 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:51:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("valor de a: ")
b = input("valor de b: ")
x = input("valor de x: ")

if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo ", a, ",", b)
	else:
		print(x, "nao pertencer ao intervalo ", a, ",", b)
else:
	print("Entradas", a, "e", b + "invalidas")
-- OUTPUT:
4 nao pertencer ao intervalo  2 , 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:52:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo ", a, ",", b)
	else:
		print(x, "nao pertencer ao intervalo ", a, ",", b)
else:
	print("Entradas", a, "e", b + " invalidas")
-- OUTPUT:
2 nao pertencer ao intervalo  3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:52:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo ", a, ",", b)
	else:
		print(x, "nao pertencer ao intervalo ", a, ",", b)
else:
	print("Entradas", a, "e", b + " invalidas")
-- EXECUTION TIME:
0.231803
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2 nao pertencer ao intervalo  3 , 4
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 nao pertencer ao intervalo  1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:52:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo ", a, ",", b)
	else:
		print(x, "nao pertencer ao intervalo ", a, ",", b)
else:
	print("Entradas", a, "e", b + " invalidas")
-- OUTPUT:
2 nao pertencer ao intervalo  3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:53:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a, ",", b)
	else:
		print(x, "nao pertencer ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b + " invalidas")
-- OUTPUT:
2 nao pertencer ao intervalo 3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:53:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a, ",", b)
	else:
		print(x, "nao pertencer ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b + " invalidas")
-- EXECUTION TIME:
0.140158
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2 nao pertencer ao intervalo 3 , 4
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 nao pertencer ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:53:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a, ",", b)
	else:
		print(x, "nao pertencer ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b + " invalidas")
-- OUTPUT:
2 nao pertencer ao intervalo 3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:56:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a, ",", b)
	else:
		print(x, "nao pertencer ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b," invalidas")
-- OUTPUT:
2 nao pertencer ao intervalo 3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:57:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a, ",", b)
	else:
		print(x, "nao pertencer ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b," invalidas")
-- EXECUTION TIME:
0.171805
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2 nao pertencer ao intervalo 3 , 4
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5  invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 nao pertencer ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:57:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a, ",", b)
	else:
		print(x, "nao pertencer ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b," invalidas")
-- OUTPUT:
2 nao pertencer ao intervalo 3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:58:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a, ",", b)
	else:
		print(x, "nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b," invalidas")
-- OUTPUT:
2 nao pertence ao intervalo 3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:58:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a, ",", b)
	else:
		print(x, "nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b," invalidas")
-- EXECUTION TIME:
0.185189
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2 nao pertence ao intervalo 3 , 4
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5  invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 nao pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:59:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a, ",", b)
	else:
		print(x, "nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b," invalidas")
-- OUTPUT:
2 nao pertence ao intervalo 3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:03:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a,",", b)
	else:
		print(x, "nao pertence ao intervalo", a,",", b)
else:
	print("Entradas", a, "e", b," invalidas")
-- OUTPUT:
2 nao pertence ao intervalo 3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:03:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a,",", b)
	else:
		print(x, "nao pertence ao intervalo", a,",", b)
else:
	print("Entradas", a, "e", b," invalidas")
-- EXECUTION TIME:
0.170407
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2 nao pertence ao intervalo 3 , 4
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5  invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 nao pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:03:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a,",", b)
	else:
		print(x, "nao pertence ao intervalo", a,",", b)
else:
	print("Entradas", a, "e", b," invalidas")
-- OUTPUT:
2 nao pertence ao intervalo 3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:04:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a,",",b)
	else:
		print(x, "nao pertence ao intervalo", a,",",b)
else:
	print("Entradas", a, "e", b," invalidas")
-- OUTPUT:
2 nao pertence ao intervalo 3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:04:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a,",",b)
	else:
		print(x, "nao pertence ao intervalo", a,",",b)
else:
	print("Entradas", a, "e", b," invalidas")
-- OUTPUT:
2 nao pertence ao intervalo 3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:05:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a,",",b)
	else:
		print(x, "nao pertence ao intervalo", a,",",b)
else:
	print("Entradas", a, "e", b," invalidas")
-- EXECUTION TIME:
0.148641
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2 nao pertence ao intervalo 3 , 4
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5  invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 nao pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:05:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a,",",b)
	else:
		print(x, "nao pertence ao intervalo", a,",",b)
else:
	print("Entradas", a, "e", b," invalidas")
-- OUTPUT:
2 nao pertence ao intervalo 3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:05:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a,",",b)
	else:
		print(x, "nao pertence ao intervalo", a,",",b)
else:
	print("Entradas", a,"e",b," invalidas")
-- OUTPUT:
2 nao pertence ao intervalo 3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:05:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a,",",b)
	else:
		print(x, "nao pertence ao intervalo", a,",",b)
else:
	print("Entradas", a,"e",b," invalidas")
-- EXECUTION TIME:
0.14085
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2 nao pertence ao intervalo 3 , 4
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5  invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 nao pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:06:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = input("valor de x: ")
a = input("valor de a: ")
b = input("valor de b: ")


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a, ",", b)
	else:
		print(x, "nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b," invalidas")
-- OUTPUT:
2 nao pertence ao intervalo 3 , 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:31:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a, ",", b)
	else:
		print(x, "nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b," invalidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:31:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))


if (b > a):
	if (x>=a) and (x<=b):
		print(x, "pertence ao intervalo", a, ",", b)
	else:
		print(x, "nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b," invalidas")
-- EXECUTION TIME:
0.139517
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5  invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
